--- a/k8s/templates/ws-api.yaml
+++ b/k8s/templates/ws-api.yaml
@@ -36,11 +36,20 @@ spec:
         app.kubernetes.io/component: backend
         app.kubernetes.io/part-of: chat
     spec:
+      initContainers:
+        - name: "migrate_database"
+          image: "${KUBERNETES_IMAGE}"
+          command:
+          - /bin/bash
+          - "-c"
+          - "php artisan migrate"
       containers:
         - name: ws
           image: "${KUBERNETES_IMAGE}"
           imagePullPolicy: Always
           env:
+            - name: APP_ENV
+              value: "${APP_ENV}"
             - name: JWT_KEY
               value: "${JWT_KEY}"
             - name: JABBER_URL
