--- a/k8s/templates/ws-api.yaml
+++ b/k8s/templates/ws-api.yaml
@@ -37,7 +37,7 @@ spec:
         app.kubernetes.io/part-of: chat
     spec:
       initContainers:
-        - name: "migrate_database"
+        - name: "migrate-database"
           image: "${KUBERNETES_IMAGE}"
           command:
           - /bin/bash
