--- a/k8s/templates/ej.yaml
+++ b/k8s/templates/ej.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ej
-  namespace: gamedragon
+  namespace: ${K8S_NAMESPACE}
   labels:
     app.kubernetes.io/name: ej
 spec:
@@ -30,11 +30,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ej
-  namespace: gamedragon
+  namespace: ${K8S_NAMESPACE}
   labels:
     app.kubernetes.io/name: ej
 spec:
-  replicas: 1
+  replicas: ${K8S_DEPLOY_REPLICAS}
   selector:
     matchLabels:
       app.kubernetes.io/name: ej
@@ -42,7 +42,7 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: ej
-        app.kubernetes.io/version: ejabberd_ws_handler
+        app.kubernetes.io/version: ${K8S_DEPLOY_VERSION}
         app.kubernetes.io/component: ejabberd
         app.kubernetes.io/part-of: chat
     spec:
@@ -66,7 +66,7 @@ spec:
             mountPath: /certs
       containers:
         - name: ej
-          image: "${KUBERNETES_IMAGE}"
+          image: "${K8S_IMAGE}"
           imagePullPolicy: Always
           ports:
             - name: xmpp-c2s
@@ -90,11 +90,11 @@ spec:
             periodSeconds: 10
           resources:
             requests:
-              cpu: "1"
-              memory: "2G"
+              cpu: "${K8S_RES_REQ_CPU}"
+              memory: "${K8S_RES_REQ_RAM}"
             limits:
-              cpu: "2"
-              memory: "4G"
+              cpu: "${K8S_RES_LIM_CPU}"
+              memory: "${K8S_RES_LIM_RAM}"
           volumeMounts:
           - name: config-volume
             mountPath: /app/etc/ejabberd
@@ -108,13 +108,13 @@ spec:
             name: ej
         - name: crt
           secret:
-            secretName: chat-gd1.xmpp.oncam.com
+            secretName: ${K8S_XMPP_DOMAIN_SECRET_NAME}
             items:
             - key: tls.crt
               path: tls.crt
         - name: key
           secret:
-            secretName: chat-gd1.xmpp.oncam.com
+            secretName: ${K8S_XMPP_DOMAIN_SECRET_NAME}
             items:
             - key: tls.key
               path: tls.key
