--- a/k8s/templates/ej.yaml
+++ b/k8s/templates/ej.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: v1
+apiVersion: apps/v1beta1
 kind: Service
 metadata:
   name: ej
@@ -26,7 +26,7 @@ spec:
   selector:
     app.kubernetes.io/name: ej
 ---
-apiVersion: apps/v1
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: ej
